--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#box {
+  transition: transform 0.2s ease-out;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
