--- a/src/style.css
+++ b/src/style.css
@@ -13,8 +13,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-#box {
-  transition: transform 0.2s ease-out;
+.animation {
+  transition: 0.2s ease-out;
 }
 
 a {
